# bindmc

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.in  run_release.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-all.yml  build_win.yml  release-pypi.yml  run-tests.yml
src/bindmc/: __main__.py  main.py
src/bindmc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bindmc/webgui/: Class model.md  TODO.md  TODO_old.md  app.py  default_models.json  utils.py
src/bindmc/webgui/classes/: BindingConstant.py  ChemicalShiftParam.py  Component.py  ExptData.py  ExptDataType.py  FitResult.py  MCMCSim.py  Model.py  RawData.py  Simulation.py  UIBindings.py  __init__.py
src/bindmc/webgui/components/: __init__.py  base.py  bayes.py  bayes_priors.py  binding_model.py  body.py  data_gen.py  data_import.py  data_model.py  dataset_selector.py  fitting.py  graph.py  header.py  simulation.py
src/bindmc/webgui/export/: notebook_exporter.py
src/bindmc/webgui/state/: __init__.py  statemanager.py
tests/: Testbook.xlsx  conftest.py  test_active_context_state_manager.py  test_analytical_fast_exchange_backend.py  test_bayes_plot_sizing.py  test_body_tab_guidance.py  test_component_concentration.py  test_data_model_analytical_defaults.py  test_data_model_chip_auto_enable.py  test_data_model_deselection.py  test_data_model_loading.py  test_exptdata_shift_param_naming.py  test_fit_analytical_fast_exchange_screen.py  test_fit_graph_subset_dep_vars.py  test_mcmc_walkers_default.py  test_model_setups.py  test_model_to_python.py  test_notebook_export.py  test_sim_flow.py  test_simulation_workflow_screen.py  test_startup.py  test_uvvis_fluorescence.py  testutils.py  user_storage_test001.json
tests/references/: sim_1to1_4.csv
tests/test_data/: 1to1_test
