[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "bindmc"
version = "0.1.3"
readme = "README.md"
keywords = ["chemistry", "analytical chemistry", "binding constants", "supramolecular"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",

  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.12"
dependencies = [
    "arviz==0.21.0",
    "bindtools>=0.1.3",
    "corner==2.2.3",
    "emcee==3.1.6",
    "h5py>=3.14.0",
    "latex2mathml>=3.0.0",
    "lmfit==1.3.3",
    "matplotlib==3.10.7",
    "nicegui[plotly]==3.3.1",
    "numba>=0.65.1",
    "numpy>=2.3.5",
    "openpyxl==3.1.2",
    "pandas>=2.3.3",
    "platformdirs>=3.0.0",
    "pywebview>=5",
    "scipy==1.16.3",
    "tqdm==4.66.3",
    "uncertainties==3.2.3",
]

authors = [
  {name = "Martin Peeks", email = "martinp23@googlemail.com"},
  {email = "m.peeks@unsw.edu.au"},
]

[project.urls]
Homepage = "https://github.com/martinp23/bindmc"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/martinp23/bindmc.git"
Issues = "https://github.com/martinp23/bindmc/issues"

[tool.uv.sources]
bindtools = { path = "./bindtools", editable = true }

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.17",
    "selenium>=4.44.0",
]
